--- a/index.html
+++ b/index.html
@@ -508,7 +508,7 @@
             { code: 'HRK', name: 'الكونا الكرواتية' },
             { code: 'HUF', name: 'الفورنت المجري' },
             { code: 'IDR', name: 'الروبية الإندونيسية' },
-            { code: 'ILS', name: 'الشيكل الإسرائيلي' },
+            { code: 'ILS', name: 'الشيكل الفلسطيني' },
             { code: 'INR', name: 'الروبية الهندية' },
             { code: 'ISK', name: 'الكرونا الآيسلندية' },
             { code: 'JPY', name: 'الين الياباني' },
